@@ -2,7 +2,9 @@ package com.oleamedical.wax.demos.springpy.controller;
 
 import com.oleamedical.wax.demos.springpy.python.PythonController;
 import org.apache.tomcat.util.http.fileupload.IOUtils;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -11,6 +13,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import javax.imageio.ImageIO;
 import java.io.*;
+import java.nio.file.Files;
 
 @RestController
 public class SegmentationController {
@@ -24,20 +27,21 @@ public class SegmentationController {
     @PostMapping(
             value = "/segment",
             produces = MediaType.IMAGE_PNG_VALUE)
-    public RequestResponse segment(@RequestParam("dcmFile") MultipartFile file) throws IOException {
-        if (file.isEmpty()) return new RequestResponse("error", "File is empty");
-        System.out.println(file.getOriginalFilename());
+    public ResponseEntity<byte[]> segment(@RequestParam(value = "dcmFile", required = false) MultipartFile file) throws IOException {
+        if (file == null) return ResponseEntity.badRequest().build();
 
-        if (!file.getOriginalFilename().endsWith(".dcm")) return new RequestResponse("error", "File is not a dcm file");
+        if (file.isEmpty()) return ResponseEntity.badRequest().build();
 
-        //TODO Graalpy brain segmentation
-        File output = pythonController.segment(file.getResource().getFile());
-        FileInputStream fis = new FileInputStream(output);
-        InputStream in = new BufferedInputStream(fis);
+        if (!file.getOriginalFilename().endsWith(".png")) return ResponseEntity.status(HttpStatus.UNSUPPORTED_MEDIA_TYPE).build();
 
-        pythonController.getContext().eval("python", "print('hello world')");
+        File output = pythonController.segment(file.getBytes());
 
-        return new RequestResponse("success", "Dicom file segmented").data(in.readAllBytes());
+        byte[] imageBytes = Files.readAllBytes(output.toPath());
+        output.delete();
+        return ResponseEntity.ok()
+                .contentType(MediaType.IMAGE_PNG)
+                .body(imageBytes);
     }
+
 
 }
